# digital_technologies

./: pyproject.toml
lab1/: testy_cw1.py
lab3/: gates.py  graph.py  minimize.py  simulation.py  vizualize.py
lab3/tests/: test_transitions.py
lab3/truth_table/: truth_table_output.csv  truth_table_state_transitions.csv
