[project]
name = "digital-technologies"
version = "0.1.0"
description = ""
authors = [
    {name = "Wiktor Sędzimir",email = "wiktor.sedzimir@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz (>=0.20.3,<0.21.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
